figure, size-full, alignright fix

--- a/site/web/app/themes/IH/resources/assets/styles/common/_global.scss
+++ b/site/web/app/themes/IH/resources/assets/styles/common/_global.scss
@@ -235,7 +235,7 @@ hr {
   }
 }
 
-figure {
+figure:not(.wp-caption) {
   width: inherit !important;
 
   img:not(.size-full) {
